@@ -10,3 +10,9 @@ To do:
 - Cleanup Options::update_gui()
 - Fix bugs ;-)
 - Make gnubiff 64bit safe (see debian bug #301853 report by David Mosberger)
+
+Version 2.2.0:
+--------------
+
+* GtkAboutDialog (needs Gtk 2.6)
+* Summary instead of immediate notification
