@@ -14,6 +14,7 @@ Version 2.1.4
         "src/gnubiff_options.*", "src/gui.*", "src/local.*", "src/options.*",
         "src/socket.*" and "src/ui-applet.*"
    - Cleanup: New class Support (for existing functions in "src/support.cc")
+   - Cleanup: Moved parsing of number sequences to "src/support.cc"
 
 Version 2.1.3		2005-04-03 23:57
  * Robert Sowada
